Add development smtp server

--- a/index.html
+++ b/index.html
@@ -204,7 +204,10 @@ layout: default
           id="submitButton"
           type="submit"
         >
-          Send Message
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <div class="button-text">Send Message</div>
         </button>
       </div>
     </form>
