Update directory structure
- Add new why page

--- a/privacy.html
+++ b/privacy.html
@@ -1,52 +1,38 @@
 ---
-layout: default
+layout: article
 title: Privacy Policy
 ---
 
-<!-- Navigation-->
-{% include navigation.html %}
-<!-- Masthead-->
-{% include masthead-small.html title="Privacy Policy"%}
-
-<section class="page-section bg-white full-page-content">
-  <div class="container">
-    User privacy and security is becoming ever more important.
-    <br />
-    <br />
-    <h4>What we collect and receive:</h4>
-    <div class="container">
-      <div class="row p-3">
-        <div class="col-md-2"><strong>Usage data</strong></div>
-        <div class="col">
-          No cookies or tracking software is used on this site. We collect
-          anonymous statistics using privacy first
-          <a href="https://www.cloudflare.com/en-gb/web-analytics "
-            >Cloudfare Analytics</a
-          >.
-        </div>
-      </div>
-      <div class="row p-3">
-        <div class="col-md-2"><strong>Contacting Us</strong></div>
-        <div class="col">
-          When you send us email using our or use the form on our Contact page
-          an we will collect your name, email address, message, etc. We use this
-          data solely to answer your questions. We will never
-          sell your email or personal data to anyone.
-        </div>
-      </div>
+User privacy and security is becoming ever more important.
+<br />
+<br />
+<h4>What we collect and receive:</h4>
+<div class="container">
+  <div class="row p-3">
+    <div class="col-md-2"><strong>Usage data</strong></div>
+    <div class="col">
+      No cookies or tracking software is used on this site. We collect anonymous
+      statistics using privacy first
+      <a href="https://www.cloudflare.com/en-gb/web-analytics "
+        >Cloudfare Analytics</a
+      >.
     </div>
-    If you have any questions, please reach out to
-    <a href="mailto:contact@accesstothecloud.com"
-      >contact@accesstothecloud.com</a
-    >
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
   </div>
-</section>
-
-<!-- Footer-->
-{% include footer.html %}
+  <div class="row p-3">
+    <div class="col-md-2"><strong>Contacting Us</strong></div>
+    <div class="col">
+      When you send us email using our or use the form on our Contact page an we
+      will collect your name, email address, message, etc. We use this data
+      solely to answer your questions. We will never sell your email or personal
+      data to anyone.
+    </div>
+  </div>
+</div>
+If you have any questions, please reach out to
+<a href="mailto:contact@accesstothecloud.com">contact@accesstothecloud.com</a>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
