--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 ---
 title: ATTC
-description: Helping businesses move to the cloud since 2016
-layout: default
+layout: home
 ---
 
-{% include navigation.html %} {% include masthead-large.html %}
 <section class="page-section bg-white">
   <div class="container">
     <div class="text-center">
@@ -28,7 +26,7 @@ layout: default
       </div>
       <div class="col-md-6">
         <img
-          src="{{ site.baseurl }}/images/homepage_illustration.png"
+          src="{{ site.baseurl }}/assets/images/homepage_illustration.png"
           alt="Screenshot"
           class="img-fluid"
         />
@@ -38,7 +36,7 @@ layout: default
       <div class="col-md-6 order-2 order-md-1">
         <div style="position: relative">
           <img
-            src="{{ site.baseurl }}/images/computer_screen.png"
+            src="{{ site.baseurl }}/assets/images/computer_screen.png"
             style="width: 100%; height: auto"
             alt="..."
           />
@@ -52,21 +50,21 @@ layout: default
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="{{ site.baseurl }}/images/jqc_showcase_1.png"
+                  src="{{ site.baseurl }}/assets/images/jqc_showcase_1.png"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="{{ site.baseurl }}/images/jqc_showcase_2.png"
+                  src="{{ site.baseurl }}/assets/images/jqc_showcase_2.png"
                   class="d-block w-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="{{ site.baseurl }}/images/jqc_showcase_0.png"
+                  src="{{ site.baseurl }}/assets/images/jqc_showcase_0.png"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -103,7 +101,7 @@ layout: default
         class="col-md-6 d-flex order-1 order-md-2 flex-column justify-content-around"
       >
         <div>
-          <h2>Have specific requirements that need a special touch?</h2>
+          <h2>Have requirements that need a special touch?</h2>
           <p>
             <br />
             We understand that there's so many great tools out there, but none
@@ -120,14 +118,13 @@ layout: default
             <br />
             With over 7 years of commercial software engineering experience, we
             can get your data to the right people at the right time. Safely,
-            securely and efficiently. <scrolling thing of JQC homepage / client
-            page / AirQino dashboard>
+            securely and efficiently.
           </p>
         </div>
       </div>
       <div class="col-md-6">
         <img
-          src="{{ site.baseurl }}/images/illustration_1.jpg"
+          src="{{ site.baseurl }}/assets/images/illustration_1.jpg"
           alt="Screenshot"
           class="img-fluid"
         />
@@ -220,10 +217,8 @@ layout: default
         >
         <br />
         <br />
-        Reach out to us today for a quote!
       </p>
+      <h2>Turbocharge your business today!</h2>
     </div>
   </div>
 </section>
-
-{% include footer.html %}
