Update homepage content

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -16,11 +16,11 @@ layout: home
     <div class="row py-3">
       <div class="col-md-6 d-flex flex-column justify-content-around">
         <div>
-          <h2>Have an old system that needs fixing?</h2>
+          <h2>Have old processes that need updating?</h2>
           <p>
             <br />
-            We are experts in moving old systems built in tools like Microsoft
-            Access to the cloud.
+            We are experts in taking old processes built with tools like Microsoft
+            Access or Excel and breathing life into them with modern software.
           </p>
         </div>
       </div>
@@ -218,7 +218,7 @@ layout: home
         <br />
         <br />
       </p>
-      <h2>Turbocharge your business today!</h2>
+      <h2>Get in touch today!</h2>
     </div>
   </div>
 </section>
