Add map to index page

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -19,8 +19,9 @@ layout: home
           <h2>Have old processes that need updating?</h2>
           <p>
             <br />
-            We are experts in taking old processes built with tools like Microsoft
-            Access or Excel and breathing life into them with modern software.
+            We are experts in taking old processes built with tools like
+            Microsoft Access or Excel and breathing life into them with modern
+            software.
           </p>
         </div>
       </div>
@@ -140,7 +141,7 @@ layout: home
     </div>
     <form id="contactForm">
       <div class="row align-items-stretch mb-5">
-        <div class="col-md-6">
+        <div class="col-md-3">
           <div class="form-group">
             <input
               class="form-control"
@@ -174,6 +175,18 @@ layout: home
               required
             ></textarea>
             <div class="invalid-feedback">A message is required.</div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <iframe
+            title="Map of Adelaide"
+            width="100%"
+            height="auto"
+            src="https://www.openstreetmap.org/export/embed.html?bbox=138.36730957031253%2C-35.1008105185029%2C138.83422851562503%2C-34.744997854274125&amp;layer=mapnik&amp;marker=-34.92309703425986%2C138.60076904296875"
+            style="padding-bottom: 1.5rem"
+          ></iframe>
+          <div class="text-center text-light fs-6 mb-4">
+            Based in Adelaide, serving clients all over the world.
           </div>
         </div>
         <!-- Submit success message-->
